--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "name": "abdulmannans/seed-spotter",
     "description": "A package to spot the discrepancies between database and seeders",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "type": "library",
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/support": "^8.0|^9.0|^10.0"
+        "illuminate/support": "^8.0"
     },
     "require-dev": {
         "pestphp/pest": "^1.0|^2.0",
