--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.25",
         "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0|^10.0",
         "pestphp/pest": "^1.0|^2.0|^3.0",
         "pestphp/pest-plugin-laravel": "^1.0|^2.0|^3.0"
